# ytpipe

./: .gitignore  BATCH_PROCESSING.md  MANIFEST.in  README.md  VAD_OPTIMIZATION.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml
examples/: basic_download_and_transcribe.py  parallel_transcription_example.py  vad_examples.py
src/ytpipe/: __init__.py  batch_processing.py  cli.py  config.py  download.py  transcribe.py
tests/: conftest.py  test_batch_processing.py  test_config.py  test_download.py  test_vad.py
