[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytpipe"
version = "0.1.0"
description = "YouTube audio download and faster-whisper transcription pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Adnan Mehremic", email = "mehremic.a@gmail.com" }
]
keywords = ["youtube", "audio", "transcription", "whisper", "faster-whisper", "yt-dlp"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "yt-dlp[default]>=2025.11.12",
  "faster-whisper>=1.0.0",
  "tqdm>=4.66.0",
  "typer>=0.12.0",
]

[project.scripts]
ytpipe = "ytpipe.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "mypy>=1.10.0",
  "black>=24.0.0",
  "ruff>=0.5.0",
]
